<resources>
    <string name="app_name">SMZ MOV</string>
    <string name="app_name2">SMZ Movie</string>
    <string name="lewati_perkenalan">LEWATI PERKENALAN</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="memulai">MEMULAI</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui \n film yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan \n update film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk \n transaksi tiket nonton</string>
    <string name="masuk_akun">MASUK AKUN</string>
    <string name="daftar_akun_baru">DAFTAR AKUN BARU</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="photo">Photo</string>
    <string name="upload_nanti">UPLOAD NANTI</string>
    <string name="selamat_datang">Selamat Datang,\nRatana</string>
    <string name="simpan_dan_lanjutkan">SIMPAN DAN LANJUTKAN</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="pilih_bangku">PILIH BANGKU</string>
    <string name="pilih_bangku_title">Pilih Bangku</string>
    <string name="layar_bioskop">LAYAR BIOSKOP</string>
    <string name="bayar_sekarang">BAYAR SEKARANG</string>
    <string name="checkout">Checkout</string>
    <string name="batalkan">BATALKAN</string>
    <string name="when">When</string>
    <string name="date_time">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="seats">Seats</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_bayar">Total Harus Dibayar</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan_data_baru">SIMPAN DATA BARU</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="my_history">My History</string>

    <string name="lihat_tiket">LIHAT TIKET</string>
    <string name="home">HOME</string>
    <string name="happy_watch">HAPPY WATCH</string>
    <string name="scanqr_desc">Silahkan melakukan scanning \n pada counter tiket terdekat</string>
    <string name="tutup">TUTUP</string>

    <string name="hello_blank_fragment">Hello</string>
    <string name="simpan_data">SIMPAN DATA</string>
    <string name="nama">Nama</string>
    <string name="keluar">Keluar App</string>
</resources>
